2009-10-21  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorOptions.cs:
	* MonoDevelop.SourceEditor.OptionPanels/MarkerPanel.cs:
	* MonoDevelop.SourceEditor/StyledSourceEditorOptions.cs: Added
	  enable animations option.

2009-10-14  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.SourceEditor.addin.xml: Fix Mac keybinding.

2009-10-14  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.SourceEditor.addin.xml:
	* MonoDevelop.SourceEditor/SourceEditorCommands.cs:
	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: Add a
	  command to pulse the caret.

2009-10-14  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Added caret
	  pulse.

2009-10-14  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: Fixed bug
	  with constructor initializers.

2009-10-14  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Added caret
	  line highlighting.

2009-10-14  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs:
	* MonoDevelop.SourceEditor/SearchAndReplaceWidget.cs: Search
	  pattern is now set when search widget is first opened/added
	  animated search results.

2009-10-14  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: Fixed
	  method overloading when no space is used before '('.

2009-10-13  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Fixed C/Vala
	  bindings.

2009-10-09  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/LanguageItemWindow.cs: Fixed xml
	  documentation summary markup.

2009-10-09  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor.addin.xml: Merged code template
	  windows.

2009-10-08  Ankit Jain  <jankit@novell.com>

	* MonoDevelop.SourceEditor.csproj: Use \ instead of '/'
	in the Import.

2009-10-08  Ankit Jain  <jankit@novell.com>
