@@ -10,7 +10,6 @@
 
 namespace MonoDevelop.SourceEditor {
     
-    
     internal partial class GotoLineNumberWidget {
         
         private Gtk.HBox hbox1;
