@@ -10,7 +10,6 @@
 
 namespace MonoDevelop.SourceEditor.OptionPanels {
     
-    
     internal partial class GeneralOptionsPanel {
         
         private Gtk.VBox vbox1;
