@@ -1,5 +1,17 @@
 2009-10-21  Mike Krüger  <mkrueger@novell.com>
 
+	* gtk-gui/gui.stetic:
+	* gtk-gui/generated.cs:
+	* gtk-gui/MonoDevelop.SourceEditor.GotoLineNumberWidget.cs:
+	* gtk-gui/MonoDevelop.SourceEditor.SearchAndReplaceWidget.cs:
+	* gtk-gui/MonoDevelop.SourceEditor.OptionPanels.MarkerPanel.cs:
+	* gtk-gui/MonoDevelop.SourceEditor.OptionPanels.BehaviorPanel.cs:
+	* gtk-gui/MonoDevelop.SourceEditor.OptionPanels.HighlightingPanel.cs:
+	* gtk-gui/MonoDevelop.SourceEditor.OptionPanels.GeneralOptionsPanel.cs:
+	  Added missing check button.
+
+2009-10-21  Mike Krüger  <mkrueger@novell.com>
+
 	* MonoDevelop.SourceEditor/SourceEditorOptions.cs:
 	* MonoDevelop.SourceEditor.OptionPanels/MarkerPanel.cs:
 	* MonoDevelop.SourceEditor/StyledSourceEditorOptions.cs: Added
